NEXT
    Distribution Fixes
    * Demand latest version of Devel::Pragma so as to avoid
      load order dependencies
      [github #41]

    Docs
    * Document which features require Data::Alias and Const::Fast
      [github #90]

20131010    Thu Oct 10 00:57:41 PDT 2013
    Promoted to full release

20131007.0002_002   Mon Oct  7 00:02:30 PDT 2013
    Distribution Fixes
    * Fixed failing test in 5.10.0
      (uncovered by CPAN Testers)

20131004.0159_001   Fri Oct  4 01:59:55 PDT 2013
    Bug Fixes
    * Removed experimental smartmatch warnings
    * Don't require Data::Alias for named params unless you have to
      [github #71]

    Docs
    * Updated close parend problem to include quotes and a workaround
      [rt.cpan.org 85925]
    * Fixed some typos (thanks dsteinbrunner)
      [github #88]

    Distribution Fixes
    * Fixed repo link in metadata (thanks dsteinbrunner)
      [github #87]

20130505    May  5 21:17:45 PDT 2013
    Promoted to full release

20130427.0031_001   Sat Apr 27 00:31:04 PDT 2013
    Distribution Fixes
    * Add M::S::Parameter to MANIFEST
      [github #76]
    * Change representation of Infinity to work on Win32
      [github #75]

    Bug Fixes
    * Fixed obscure bug where an eval in Method::Signatures wouldn't be
      skipped when carp'ing (i.e. in carp_location_for())
      [github #72]

    Misc
    * Rearranged so signature is now an object
      [github #30]
    * Add hook for Travis CI
      [github #78]

    Docs
    * Found and fixed missing parend

20130222    Feb 22 21:10:10 PST 2013
    Promoted to full release

20130218.1447_001   Mon Feb 18 14:47:28 PST 2013
    Distribution Fixes
    * Fixed stray detritus in MANIFEST.
    * Somehow my last-minute fix to the new error handler test didn't
      make it in; this will fix "Can't locate Moose.pm" errors.

20130216.1729_001   Sat Feb 16 17:29:45 PST 2013
    New Features
    * Handling of run-time errors (default: die) is now overridable by